# picodino

./: .gitignore  Cargo.toml  README.md
src/: background.rs  dino.rs  game.rs  rng.rs
