[package]
name = "dino"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.4.0", features = ["rp235xa", "time-driver", "critical-section-impl", "defmt"] }
embassy-time = "0.4.0"
panic-probe = { version = "1.0.0", features = ["defmt", "defmt-error"] }
ssd1306 = "0.10.0"

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
lto = true
opt-level = "s"
